evaluate-news-nlp

--- a/src/client/views/index.html
+++ b/src/client/views/index.html
@@ -24,7 +24,8 @@
 
         <main>
             <section>
-                <form class="" onsubmit="return Client.handleSubmit(event)">
+                <!--<form class="" onsubmit="return Client.handleSubmit(event)">-->
+                <form class ="">
                     <input id="name" type="text" name="input" value="" onblur="onBlur()" placeholder="Name">
                     <input type="submit" name="" value="submit" onclick="return Client.handleSubmit(event)" onsubmit="return Client.handleSubmit(event)">
                 </form>
@@ -33,6 +34,7 @@
             <section>
                 <strong>Form Results:</strong>
                 <div id="results"></div>
+                <h2>text :<span id="pol-con"></span></h2>
             </section>
         </main>
 
